--- a/Week2/MDF1-wk2/MDF1-wk2/en.lproj/FirstViewController.xib
+++ b/Week2/MDF1-wk2/MDF1-wk2/en.lproj/FirstViewController.xib
@@ -67,10 +67,10 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUIButton" id="656466723">
+					<object class="IBUIButton" id="509487717">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{114, 210}, {93, 37}}</string>
+						<string key="NSFrame">{{114, 310}, {93, 37}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -79,7 +79,7 @@
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUIButtonType">1</int>
 						<string key="IBUINormalTitle">More Info</string>
-						<object class="NSColor" key="IBUIHighlightedTitleColor" id="757430654">
+						<object class="NSColor" key="IBUIHighlightedTitleColor" id="189960964">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
@@ -87,29 +87,29 @@
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
-						<object class="NSColor" key="IBUINormalTitleShadowColor" id="220031794">
+						<object class="NSColor" key="IBUINormalTitleShadowColor" id="193664574">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MC41AA</bytes>
 						</object>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="799500224">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="131352397">
 							<int key="type">2</int>
 							<double key="pointSize">15</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="214704536">
+						<object class="NSFont" key="IBUIFont" id="239292930">
 							<string key="NSName">Helvetica-Bold</string>
 							<double key="NSSize">15</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUIView" id="348277362">
+					<object class="IBUIView" id="61059948">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUIButton" id="988391130">
-								<reference key="NSNextResponder" ref="348277362"/>
+							<object class="IBUIButton" id="603744864">
+								<reference key="NSNextResponder" ref="61059948"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 43}, {72, 37}}</string>
-								<reference key="NSSuperview" ref="348277362"/>
+								<string key="NSFrame">{{124, 336}, {72, 37}}</string>
+								<reference key="NSSuperview" ref="61059948"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -117,14 +117,78 @@
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<int key="IBUIButtonType">1</int>
 								<string key="IBUINormalTitle">Back</string>
-								<reference key="IBUIHighlightedTitleColor" ref="757430654"/>
+								<reference key="IBUIHighlightedTitleColor" ref="189960964"/>
 								<object class="NSColor" key="IBUINormalTitleColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 								</object>
-								<reference key="IBUINormalTitleShadowColor" ref="220031794"/>
-								<reference key="IBUIFontDescription" ref="799500224"/>
-								<reference key="IBUIFont" ref="214704536"/>
+								<reference key="IBUINormalTitleShadowColor" ref="193664574"/>
+								<reference key="IBUIFontDescription" ref="131352397"/>
+								<reference key="IBUIFont" ref="239292930"/>
+							</object>
+							<object class="IBUILabel" id="580620282">
+								<reference key="NSNextResponder" ref="61059948"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{20, 157}, {280, 74}}</string>
+								<reference key="NSSuperview" ref="61059948"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<string key="IBUIText">Shae B. R. Klusman</string>
+								<object class="NSColor" key="IBUITextColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MSAxIDEAA</bytes>
+									<object class="NSColorSpace" key="NSCustomColorSpace" id="551163308">
+										<int key="NSID">1</int>
+									</object>
+								</object>
+								<nil key="IBUIHighlightedColor"/>
+								<int key="IBUIBaselineAdjustment">0</int>
+								<float key="IBUIMinimumFontSize">10</float>
+								<int key="IBUITextAlignment">1</int>
+								<object class="IBUIFontDescription" key="IBUIFontDescription">
+									<int key="type">1</int>
+									<double key="pointSize">30</double>
+								</object>
+								<object class="NSFont" key="IBUIFont">
+									<string key="NSName">Helvetica</string>
+									<double key="NSSize">30</double>
+									<int key="NSfFlags">16</int>
+								</object>
+							</object>
+							<object class="IBUILabel" id="1021563060">
+								<reference key="NSNextResponder" ref="61059948"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{20, 250}, {280, 21}}</string>
+								<reference key="NSSuperview" ref="61059948"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<string key="IBUIText">MDF1   Class: 1207</string>
+								<object class="NSColor" key="IBUITextColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MSAxIDEAA</bytes>
+									<reference key="NSCustomColorSpace" ref="551163308"/>
+								</object>
+								<nil key="IBUIHighlightedColor"/>
+								<int key="IBUIBaselineAdjustment">0</int>
+								<float key="IBUIMinimumFontSize">10</float>
+								<int key="IBUITextAlignment">1</int>
+								<object class="IBUIFontDescription" key="IBUIFontDescription">
+									<int key="type">1</int>
+									<double key="pointSize">17</double>
+								</object>
+								<object class="NSFont" key="IBUIFont">
+									<string key="NSName">Helvetica</string>
+									<double key="NSSize">17</double>
+									<int key="NSfFlags">16</int>
+								</object>
 							</object>
 						</array>
 						<string key="NSFrame">{{0, -24}, {320, 460}}</string>
@@ -163,7 +227,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">moreInfoBtn</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="656466723"/>
+						<reference key="destination" ref="509487717"/>
 					</object>
 					<int key="connectionID">11</int>
 				</object>
@@ -179,7 +243,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">viewInfo</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="348277362"/>
+						<reference key="destination" ref="61059948"/>
 					</object>
 					<int key="connectionID">14</int>
 				</object>
@@ -187,14 +251,14 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">backToMainBtn</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="988391130"/>
+						<reference key="destination" ref="603744864"/>
 					</object>
 					<int key="connectionID">12</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">moreBtn:</string>
-						<reference key="source" ref="656466723"/>
+						<reference key="source" ref="509487717"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -203,7 +267,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">backBtn:</string>
-						<reference key="source" ref="988391130"/>
+						<reference key="source" ref="603744864"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -223,8 +287,8 @@
 						<reference key="object" ref="191373211"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="483052203"/>
-							<reference ref="656466723"/>
-							<reference ref="348277362"/>
+							<reference ref="509487717"/>
+							<reference ref="61059948"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -246,21 +310,33 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">8</int>
-						<reference key="object" ref="656466723"/>
+						<reference key="object" ref="509487717"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">9</int>
-						<reference key="object" ref="348277362"/>
+						<reference key="object" ref="61059948"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="988391130"/>
+							<reference ref="580620282"/>
+							<reference ref="603744864"/>
+							<reference ref="1021563060"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">10</int>
-						<reference key="object" ref="988391130"/>
-						<reference key="parent" ref="348277362"/>
+						<reference key="object" ref="603744864"/>
+						<reference key="parent" ref="61059948"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">17</int>
+						<reference key="object" ref="580620282"/>
+						<reference key="parent" ref="61059948"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">18</int>
+						<reference key="object" ref="1021563060"/>
+						<reference key="parent" ref="61059948"/>
 					</object>
 				</array>
 			</object>
@@ -271,6 +347,8 @@
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="10.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="18.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -279,7 +357,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">16</int>
+			<int key="maxID">18</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
