--- a/Week2/MDF1-wk2/ThirdViewController.xib
+++ b/Week2/MDF1-wk2/ThirdViewController.xib
@@ -39,19 +39,19 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIButton" id="448214943">
+					<object class="IBUIButton" id="113264571">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="165200773"/>
+						<reference key="NSNextKeyView" ref="546850934"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
-						<object class="NSColor" key="IBUIHighlightedTitleColor" id="944895191">
+						<object class="NSColor" key="IBUIHighlightedTitleColor" id="1012162084">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
@@ -59,7 +59,7 @@
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
-						<object class="NSColor" key="IBUINormalTitleShadowColor" id="929054854">
+						<object class="NSColor" key="IBUINormalTitleShadowColor" id="270386396">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MC41AA</bytes>
 						</object>
@@ -73,45 +73,42 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUILabel" id="165200773">
+					<object class="IBUILabel" id="546850934">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{91, 20}, {139, 42}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="585665286"/>
+						<reference key="NSNextKeyView" ref="229144793"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">Add Kid</string>
-						<object class="NSColor" key="IBUITextColor" id="1060785974">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MCAwIDAAA</bytes>
-						</object>
+						<string key="IBUIText">Add Child</string>
+						<reference key="IBUITextColor" ref="1012162084"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
-							<int key="type">1</int>
+							<int key="type">2</int>
 							<double key="pointSize">27</double>
 						</object>
 						<object class="NSFont" key="IBUIFont">
-							<string key="NSName">Helvetica</string>
+							<string key="NSName">Helvetica-Bold</string>
 							<double key="NSSize">27</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUILabel" id="585665286">
+					<object class="IBUILabel" id="229144793">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 70}, {280, 31}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="223912878"/>
+						<reference key="NSNextKeyView" ref="907262306"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -119,7 +116,7 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">Some day this could be an add child page</string>
-						<reference key="IBUITextColor" ref="1060785974"/>
+						<reference key="IBUITextColor" ref="1012162084"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
@@ -134,13 +131,13 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUISegmentedControl" id="938196856">
+					<object class="IBUISegmentedControl" id="660666934">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{57, 238}, {207, 44}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="70685174"/>
+						<reference key="NSNextKeyView" ref="1013640155"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -167,13 +164,13 @@
 							<reference ref="4"/>
 						</array>
 					</object>
-					<object class="IBUITextField" id="70685174">
+					<object class="IBUITextField" id="1013640155">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 306}, {280, 31}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="269228454"/>
+						<reference key="NSNextKeyView" ref="520638468"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -185,7 +182,7 @@
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MAA</bytes>
-							<object class="NSColorSpace" key="NSCustomColorSpace" id="145386319">
+							<object class="NSColorSpace" key="NSCustomColorSpace" id="413417748">
 								<int key="NSID">2</int>
 							</object>
 						</object>
@@ -196,17 +193,17 @@
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
 						<int key="IBUIClearButtonMode">1</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="925327650">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="123973925">
 							<int key="type">1</int>
 							<double key="pointSize">14</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="216419371">
+						<object class="NSFont" key="IBUIFont" id="787905270">
 							<string key="NSName">Helvetica</string>
 							<double key="NSSize">14</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUITextField" id="223912878">
+					<object class="IBUITextField" id="907262306">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 141}, {280, 31}}</string>
@@ -224,7 +221,7 @@
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MAA</bytes>
-							<reference key="NSCustomColorSpace" ref="145386319"/>
+							<reference key="NSCustomColorSpace" ref="413417748"/>
 						</object>
 						<bool key="IBUIAdjustsFontSizeToFit">YES</bool>
 						<float key="IBUIMinimumFontSize">17</float>
@@ -233,10 +230,10 @@
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
 						<int key="IBUIClearButtonMode">1</int>
-						<reference key="IBUIFontDescription" ref="925327650"/>
-						<reference key="IBUIFont" ref="216419371"/>
+						<reference key="IBUIFontDescription" ref="123973925"/>
+						<reference key="IBUIFont" ref="787905270"/>
 					</object>
-					<object class="IBUIButton" id="269228454">
+					<object class="IBUIButton" id="520638468">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{110, 356}, {100, 29}}</string>
@@ -251,12 +248,12 @@
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUIButtonType">1</int>
 						<string key="IBUINormalTitle">Submit</string>
-						<reference key="IBUIHighlightedTitleColor" ref="944895191"/>
+						<reference key="IBUIHighlightedTitleColor" ref="1012162084"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4xOTYwNzg0MzE0IDAuMzA5ODAzOTIxNiAwLjUyMTU2ODYyNzUAA</bytes>
 						</object>
-						<reference key="IBUINormalTitleShadowColor" ref="929054854"/>
+						<reference key="IBUINormalTitleShadowColor" ref="270386396"/>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">2</int>
 							<int key="size">2</int>
@@ -267,7 +264,7 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUISlider" id="685982222">
+					<object class="IBUISlider" id="580667164">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{18, 197}, {223, 23}}</string>
@@ -281,10 +278,10 @@
 						<float key="IBUIValue">1</float>
 						<float key="IBUIMaxValue">13</float>
 					</object>
-					<object class="IBUILabel" id="694539104">
+					<object class="IBUILabel" id="70294578">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 180}, {42, 21}}</string>
+						<string key="NSFrame">{{213, 181}, {42, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -294,17 +291,14 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">Age</string>
-						<object class="NSColor" key="IBUITextColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MC4yOTgwMzkyMjc3IDAuMjk4MDM5MjI3NyAwLjI5ODAzOTIyNzcAA</bytes>
-						</object>
+						<reference key="IBUITextColor" ref="1012162084"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
-						<reference key="IBUIFontDescription" ref="925327650"/>
-						<reference key="IBUIFont" ref="216419371"/>
+						<reference key="IBUIFontDescription" ref="123973925"/>
+						<reference key="IBUIFont" ref="787905270"/>
 					</object>
-					<object class="IBUITextField" id="1007722161">
+					<object class="IBUITextField" id="679434070">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{247, 192}, {53, 31}}</string>
@@ -320,7 +314,7 @@
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MAA</bytes>
-							<reference key="NSCustomColorSpace" ref="145386319"/>
+							<reference key="NSCustomColorSpace" ref="413417748"/>
 						</object>
 						<int key="IBUITextAlignment">1</int>
 						<bool key="IBUIAdjustsFontSizeToFit">YES</bool>
@@ -328,14 +322,14 @@
 						<object class="IBUITextInputTraits" key="IBUITextInputTraits">
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
-						<reference key="IBUIFontDescription" ref="925327650"/>
-						<reference key="IBUIFont" ref="216419371"/>
+						<reference key="IBUIFontDescription" ref="123973925"/>
+						<reference key="IBUIFont" ref="787905270"/>
 					</object>
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="448214943"/>
+				<reference key="NSNextKeyView" ref="113264571"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
 					<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
@@ -362,7 +356,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">name</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="223912878"/>
+						<reference key="destination" ref="907262306"/>
 					</object>
 					<int key="connectionID">15</int>
 				</object>
@@ -370,7 +364,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">notes</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="70685174"/>
+						<reference key="destination" ref="1013640155"/>
 					</object>
 					<int key="connectionID">17</int>
 				</object>
@@ -386,7 +380,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">BG</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="448214943"/>
+						<reference key="destination" ref="113264571"/>
 					</object>
 					<int key="connectionID">24</int>
 				</object>
@@ -394,7 +388,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">ageLabel</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="1007722161"/>
+						<reference key="destination" ref="679434070"/>
 					</object>
 					<int key="connectionID">29</int>
 				</object>
@@ -402,14 +396,23 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">slideBar</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="685982222"/>
+						<reference key="destination" ref="580667164"/>
 					</object>
 					<int key="connectionID">30</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">submit:</string>
+						<reference key="source" ref="520638468"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">32</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">onClick:</string>
-						<reference key="source" ref="448214943"/>
+						<reference key="source" ref="113264571"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -418,7 +421,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">onChange:</string>
-						<reference key="source" ref="685982222"/>
+						<reference key="source" ref="580667164"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">13</int>
 					</object>
@@ -437,16 +440,16 @@
 						<int key="objectID">1</int>
 						<reference key="object" ref="191373211"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="70685174"/>
-							<reference ref="223912878"/>
-							<reference ref="269228454"/>
-							<reference ref="585665286"/>
-							<reference ref="685982222"/>
-							<reference ref="694539104"/>
-							<reference ref="938196856"/>
-							<reference ref="165200773"/>
-							<reference ref="1007722161"/>
-							<reference ref="448214943"/>
+							<reference ref="1013640155"/>
+							<reference ref="907262306"/>
+							<reference ref="520638468"/>
+							<reference ref="229144793"/>
+							<reference ref="580667164"/>
+							<reference ref="660666934"/>
+							<reference ref="546850934"/>
+							<reference ref="679434070"/>
+							<reference ref="113264571"/>
+							<reference ref="70294578"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -463,52 +466,52 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="165200773"/>
+						<reference key="object" ref="546850934"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
-						<reference key="object" ref="585665286"/>
+						<reference key="object" ref="229144793"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">10</int>
-						<reference key="object" ref="938196856"/>
+						<reference key="object" ref="660666934"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">11</int>
-						<reference key="object" ref="70685174"/>
+						<reference key="object" ref="1013640155"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">12</int>
-						<reference key="object" ref="223912878"/>
+						<reference key="object" ref="907262306"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">14</int>
-						<reference key="object" ref="269228454"/>
+						<reference key="object" ref="520638468"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">22</int>
-						<reference key="object" ref="448214943"/>
+						<reference key="object" ref="113264571"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">26</int>
-						<reference key="object" ref="685982222"/>
+						<reference key="object" ref="580667164"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">27</int>
-						<reference key="object" ref="694539104"/>
+						<reference key="object" ref="70294578"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">28</int>
-						<reference key="object" ref="1007722161"/>
+						<reference key="object" ref="679434070"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
@@ -536,7 +539,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">31</int>
+			<int key="maxID">32</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -546,6 +549,7 @@
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="onChange:">id</string>
 						<string key="onClick:">id</string>
+						<string key="submit:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
 						<object class="IBActionInfo" key="onChange:">
@@ -554,6 +558,10 @@
 						</object>
 						<object class="IBActionInfo" key="onClick:">
 							<string key="name">onClick:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="submit:">
+							<string key="name">submit:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 					</dictionary>
